--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "name": "Rune Bjerke",
     "url": "http://spoox.org"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "BSD",
   "repository": {
     "url": ""
   },
   "main": "index.js",
   "dependencies": {
-    "q": "~1.2.0",
-    "amqp": "~0.2.4"
+    "amqp": "~0.2.4",
+    "async": "^0.9.0",
+    "q": "~1.2.0"
   },
   "engines": {
     "node": "*"
